FIX: correct >100% width on mobile
* when viewing on mobile the width of project details was wider than the viewport
* replaced padding spacing with margin
* adjusted styling of top/bottom gutter images to still be edge-to-edge

--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -14,6 +14,11 @@
 .gutter-image-bottom {
     object-fit: cover;
     height: 8vh;
+    width: 100vw;
+    max-width: 100vw;
+    position: relative;
+    left: -1.5rem;
+    z-index: -1;
 }
 
 .gutter-image-left,
